--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.3",
   "description": "Enforces HTTPS for node.js koa projects",
   "main": "index.js",
+  "repository": "https://github.com/turboMaCk/koa-sslify.git",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
